// Vitest Snapshot v1

exports[`<Password /> > should call onHandleSubmit() when submitted value is long enough 1`] = `
<Styled(styled.div)>
  <Styled(styled.div)>
    <h2>
      Change Password
    </h2>
    <p>
      Last changed 
      <RelativeTime
        em={true}
        time="2018-02-14T17:12:00.000000Z"
      />
    </p>
  </Styled(styled.div)>
  <styled.div
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup
      error=""
    >
      <styled.div>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value="long_password"
        />
        <styled.p />
      </styled.div>
    </InputGroup>
    <styled.div>
      <Checkbox
        checked={false}
        disabled={false}
        label="Force user to reset password on next login"
        onClick={[Function]}
      />
      <SaveButton />
    </styled.div>
  </styled.div>
</Styled(styled.div)>
`;

exports[`<Password /> > should call onHandleSubmit() when submitted value is long enough 2`] = `
<Styled(styled.div)>
  <Styled(styled.div)>
    <h2>
      Change Password
    </h2>
    <p>
      Last changed 
      <RelativeTime
        em={true}
        time="2018-02-14T17:12:00.000000Z"
      />
    </p>
  </Styled(styled.div)>
  <styled.div
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup
      error=""
    >
      <styled.div>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <styled.p />
      </styled.div>
    </InputGroup>
    <styled.div>
      <Checkbox
        checked={false}
        disabled={false}
        label="Force user to reset password on next login"
        onClick={[Function]}
      />
      <SaveButton />
    </styled.div>
  </styled.div>
</Styled(styled.div)>
`;

exports[`<Password /> > should render 1`] = `
<Styled(styled.div)>
  <Styled(styled.div)>
    <h2>
      Change Password
    </h2>
    <p>
      Last changed 
      <RelativeTime
        em={true}
        time="2018-02-14T17:12:00.000000Z"
      />
    </p>
  </Styled(styled.div)>
  <styled.div
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup
      error=""
    >
      <styled.div>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <styled.p />
      </styled.div>
    </InputGroup>
    <styled.div>
      <Checkbox
        checked={false}
        disabled={false}
        label="Force user to reset password on next login"
        onClick={[Function]}
      />
      <SaveButton />
    </styled.div>
  </styled.div>
</Styled(styled.div)>
`;

exports[`<Password /> > should render when PasswordInput value has changed 1`] = `
<Styled(styled.div)>
  <Styled(styled.div)>
    <h2>
      Change Password
    </h2>
    <p>
      Last changed 
      <RelativeTime
        em={true}
        time="2018-02-14T17:12:00.000000Z"
      />
    </p>
  </Styled(styled.div)>
  <styled.div
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup
      error=""
    >
      <styled.div>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value="bar"
        />
        <styled.p />
      </styled.div>
    </InputGroup>
    <styled.div>
      <Checkbox
        checked={false}
        disabled={false}
        label="Force user to reset password on next login"
        onClick={[Function]}
      />
      <SaveButton />
    </styled.div>
  </styled.div>
</Styled(styled.div)>
`;
